# mascord

./: .env  .env.example  .gitignore  AGENTS.md  Brewfile  Cargo.toml  DEPENDENCY_UPDATE_SUMMARY.md  README.md  bot.sh  mcp_servers.toml.example  restart.sh  run-persistent.sh
docs/: ARCHITECTURE.md  COMMANDS.md  COMPONENT_BOT_DOCS.md  COMPONENT_DATETIME.md  COMPONENT_LLM_DOCS.md  COMPONENT_RAG_DOCS.md  COMPONENT_REMINDER_DOCS.md  COMPONENT_TOOLS_DOCS.md  COMPONENT_VOICE_DOCS.md  GAP_ANALYSIS.md  IMPLEMENTATION_ROADMAP.md  QUICK_START.md  REQUIREMENTS.md  SECURITY_INCIDENT_2026-01-30.md
src/: cache.rs  config.rs  context.rs  discord_text.rs  indexer.rs  lib.rs  main.rs  mention.rs  reminders.rs  reply.rs  summarize.rs  system_prompt.rs
src/commands/: admin.rs  chat.rs  mcp.rs  memory.rs  mod.rs  music.rs  rag.rs  reminder.rs  settings.rs
src/db/: mod.rs  schema.rs
src/llm/: agent.rs  client.rs  confirm.rs  mod.rs
src/mcp/: client.rs  config.rs
src/rag/: mod.rs
src/services/: mod.rs  reminder.rs  user_memory.rs
src/tools/: executor.rs  mod.rs
src/tools/builtin/: admin.rs  mod.rs  music.rs  rag.rs  user_memory.rs
src/voice/: cleanup.rs  events.rs  mod.rs
