[package]
name = "mascord"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", features = ["voice", "gateway", "client", "model", "cache"] }
songbird = { version = "0.5", features = ["builtin-queue", "serenity"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
lru = "0.12"

# HTTP & LLM
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.28"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
