[package]
name = "mascord"
version = "0.1.0"
edition = "2021"

[dependencies]
# Discord
poise = "0.6"
serenity = { version = "0.12", features = ["voice", "gateway", "client", "model", "cache"] }
songbird = { version = "0.5", features = ["builtin-queue", "serenity"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
lru = "0.12"
async-trait = "0.1"

# HTTP & LLM
reqwest = { version = "0.12", features = ["json"] }
async-openai = "0.28"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"

# MCP (Model Context Protocol)
# Note: Using a placeholder version as the library is in early development
# We will use the rmcp-macros for easier tool definition
rmcp = { version = "0.1", features = ["client", "transport-child-process"] }

# Utilities
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
toml = "0.9.11"
